refine support for javaPreviewNeeded